<resources>
  <string name="app_name">Where Are You Go</string>
  <string name="hint_text_email">Email</string>
  <string name="hint_text_password">Mật khẩu</string>
  <string name="remember_login">Ghi nhớ tài khoản</string>
  <string name="forgot_password">Quên mật khẩu</string>
  <string name="button_sign_in">Đăng nhập</string>
  <string name="button_sign_up">Đăng ký</string>
  <string name="button_facebook">Đăng nhập bằng Facebook</string>
  <string name="hint_text_name">Họ tên</string>
  <string name="text_login_click">Bạn đã có tài khoản?Nhấp vào đây để đăng nhập ngay</string>
  <string name="list_friend_menu">Danh sách bạn bè</string>
  <string name="title_main_view">Giao diện chính </string>
  <string name="user_menu">Thiết lập người dùng</string>
  <string name="bottom_tab_map">Bản đồ </string>
  <string name="bottom_tab_search">Tìm kiếm</string>
  <string name="bottom_tab_notification">Thông báo</string>
  <string name="bottom_tab_friend_on_map">Vị trí bạn bè</string>
  <string name="bottom_tab_list_friend">Bạn bè</string>
  <string name="title_fragment_friends">Danh sách bạn bè</string>
  <string name="edit_text_search">Tìm kiếm</string>
  <string name="text_see_list_friend">Xem danh sách đang</string>
  <string name="button_offline">offline</string>
  <string name="button_online">online</string>
  <string name="text_online">ONLINE</string>
  <string name="label_venue_name">Tên</string>
  <string name="label_distance">Khoảng cách</string>
  <string name="label_vote">Điểm nhiều nhất</string>
  <string name="label_status">Trạng thái</string>
  <string name="text_view_hot">Hot</string>
  <string name="text_view_new">New</string>
  <string name="label_open_time">Giờ mở cửa</string>
  <string name="label_close_time">Giờ đóng cửa</string>
  <string name="label_category_place">Loại địa điểm</string>
  <string name="label_hour">giờ</string>
  <string name="label_minute">phút</string>
  <string name="text_tab_message">Tin nhắn</string>
  <string name="text_tab_notification">Thông báo</string>
  <string name="text_tab_invite">Lời mời</string>
  <string name="button_accept">Chấp nhận</string>
  <string name="button_cancel">Từ chối</string>
  <string name="label_user_name">Họ tên</string>
  <string name="label_address">Địa chỉ</string>
  <string name="label_password">Mật khẩu</string>
  <string name="label_phone">Điện thoại</string>
  <string name="label_email">Email</string>
  <string name="label_avatar">Ảnh đại diện</string>
  <string name="button_select_image">Chọn ảnh</string>
  <string name="label_num_of_friends">Bạn bè</string>
  <string name="label_num_of_followers">Người theo dõi </string>
  <string name="label_num_of_favorite_place">Địa điểm yêu thích</string>
  <string name="text_see_detail">Xem chi tiết</string>
  <string name="text_place_time">Giờ hoạt động</string>
  <string name="label_facebook">Facebook</string>
  <string name="button_call">Gọi</string>
  <string name="button_find_location">Tìm đường</string>
  <string name="button_search">Tìm kiếm</string>
  <string name="error_empty">Dữ liệu không được để trống!Mời nhập lại!</string>
  <string name="error_email_invalid">Email không hợp lệ!Mời nhập lại!</string>
  <string name="error_name_invalid">Họ tên không hợp lệ!Mời nhập lại!</string>
  <string name="error_email_registered">Email đã được sử dụng!Hãy nhập email khác!</string>
  <string name="error_password">Mật khẩu chỉ chứa 6->15 kí tự,ít nhất 1 ký tự đặc biệt, 1 kí tự hoa,1 chữ số</string>
  <string name="network_error">Kết nối mạng đã tắt.Cần kiểm tra lại Wifi hoặc 3G</string>
  <string name="error_name_empty">Họ tên không được để trống!Mời nhập lại!</string>
  <string name="error_email_empty">Email không được để trống!Mời nhập lại!</string>
  <string name="error_password_empty">Mật khẩu không được để trống!Mời nhập lại!</string>
  <string name="error_register_fail">Đăng ký thất bại!Kiểm tra lại dữ liệu nhập vào</string>
  <string name="register_successful">Đăng ký thành công!</string>
  <string name="login_successful">Đăng nhập thành công</string>
  <string name="login_fail">Đăng nhập thất bại!Kiểm tra lại email hoặc mật khẩu!</string>
  <string name="error_email_not_exists">Email chưa được đăng ký!Nhấn đăng ký để tạo tài khoản đăng nhập!</string>
  <string name="user_setting_item">Thiết lập tài khoản</string>
  <string name="favorite_places">Địa điểm yêu thích</string>
  <string name="follower_list">Danh sách theo dõi bạn</string>
  <string name="following_list">Danh sách đang theo dõi</string>
  <string name="sign_out">Đăng xuất</string>
  <string name="search_venue">Tìm kiếm địa điểm</string>
  <string name="google_map_key">AIzaSyDuC8d7OZ2LUUrDKM_69V1difcYCAHdKVQ</string>
  <string name="float_button_message">Gửi tin nhắn </string>
  <string name="float_button_call">Gọi nhanh</string>
  <string name="button_save">Lưu</string>
  <string name="button_edit">Chỉnh sửa</string>
  <string name="error_address_invalid">Địa chỉ không hợp lệ!Mời nhập lại!</string>
  <string name="error_phonenumber_invalid">Số điện thoại không hợp lệ!Mời nhập lại!</string>
  <string name="error_exists">Xử lý thất bại! Kiểm tra lại lỗi dữ liệu nhập vào!</string>
  <string name="save_info_success">Lưu thông tin thành công!</string>
  <string name="save_info_fail">Lưu thông tin thất bại</string>
  <string name="user_name_map">Tôi</string>
  <string name="title_venues_dialog">Danh sách địa điểm</string>
  <string name="button_close_dialog">Đóng</string>
  <string name="text_num_of_result">Số địa điểm tìm được</string>
  <string name="venude_distance">Cách bạn  </string>
  <string name="search_place_empty">Dữ liệu nhập vào trống!Mời nhập lại!</string>
  <string name="place_not_exists">Địa điểm không tồn tại!</string>
  <string name="contentDescriptor">No Image</string>
  <string name="text_rating">Đánh giá</string>
  <string name="text_price_level">Mức giá</string>
  <string name="text_venue_time">Giờ hoạt động</string>
  <string name="text_region">Phạm vi</string>
  <string name="radio_button_closest">Gần nhất</string>
  <string name="radio_button_closer">Gần</string>
  <string name="radio_button_city">Thành phố</string>
  <string name="text_radius">Bán kính</string>
  <string name="text_hint_radius">Nhập bán kính(mét)</string>
  <string name="text_label_city">Thành phố</string>
  <string name="text_hint_city">Nhập tên thành phố</string>
  <string name="text_hint_search_friend">Nhập họ tên người bạn cần tìm</string>
  <string name="button_add_friend">Thêm bạn</string>
  <string name="text_offline">OFFLINE</string>
  <string name="text_all">TẤT CẢ</string>
  <string name="text_title_add_friend">Thêm bạn</string>
  <string name="text_search_friend">Tìm kiếm bạn</string>
  <string name="hint_text_search_name">Nhập họ tên</string>
  <string name="text_result">Kết quả</string>
  <string name="text_venue_photos_empty">Địa điểm này chưa có</string>
  <string name="imageContentDescription">"No Image"</string>
  <string name="text_sign_up">Đăng ký</string>
  <string name="tile_venue_detail_dialog">Chi tiết địa điểm</string>
  <string name="text_num_of_like">thích</string>
  <string name="text_label_point">điểm</string>
  <string name="hint_search_venue_name">Nhập tên địa điểm</string>
  <string name="text_label_area">Phạm vi</string>
  <string name="button_city">Thành phố</string>
  <string name="text_display_mode">Hiển thị danh sách</string>
  <string name="title_ask_unfriend_dialog">Huỷ kết bạn?</string>
  <string name="content_ask_unfriend_dialog">Chú ý: Huỷ kết bạn sẽ xoá bỏ tất cả tin nhắn giữa hai bạn!</string>
  <string name="title_profile_dialog">Thông tin</string>
  <string name="search_friend_title_dialog">Tìm kiếm bạn</string>
  <string name="label_friend_name">Họ tên</string>
  <string name="hint_search_by_phone">Nhập số điện thoại</string>
  <string name="button_venue_location">Tìm vị trí</string>
  <string name="follow">Theo dõi</string>
  <string name="edit_text_email_helper">Email bao gồm chữ cái, chữ số, kí hiệu @ và tên miền  </string>
  <string name="edit_text_password_helper">Mật khẩu có độ dài  6 đến 15 kí tự, ít nhất có 1 kí tự hoa, 1 kí tự đặc biệt và 1 chữ cái </string>
  <string name="edit_text_name_helper">Họ tên chỉ chứa chữ cái,không chứa chữ số, không chứa kí tự đặc biệt</string>
  <string name="title_dialog_map_type">Chọn kiểu bản đồ</string>
  <string name="text_choose">Chọn</string>
  <string name="label_venue_status">Trạng thái</string>
  <string name="title_loading_search_venue">Tìm kiếm địa điểm</string>
  <string name="content_loading_search_venue">Đang tìm kiếm, bạn vui lòng chờ...</string>
  <string name="opening_hour_null">Chưa xác định</string>
  <string name="text_venue_open_time">MỞ CỬA</string>
  <string name="text_venue_close_time">ĐÓNG CỬA</string>
  <string name="button_ok">OK</string>
  <string name="text_search_venue_empty">Tên địa điểm cần tìm đang để trống, mời kiểm tra lại</string>
  <string name="price_level_free">Miễn phí</string>
  <string name="price_level_inexpensive">Rẻ</string>
  <string name="price_level_moderate">Trung bình</string>
  <string name="price_level_expensive">Đắt</string>
  <string name="price_level_veryexpensive">Rất đắt</string>
  <string name="venue_already_save">Địa điểm đã được lưu trước đó, vui lòng kiểm tra lại.</string>
  <string name="venue_saved">Địa điểm đã được lưu thành công! </string>
  <string name="button_delele_all">Xoá tất cả</string>
  <string name="recycler_view_venue_empty">Danh sách địa điểm đang trống</string>
  <string name="recylcer_view_empty">Danh sách đang trống</string>
  <string name="label_add_friend">Thêm bạn</string>
  <string name="label_search_friend">Tìm kiếm bạn</string>
  <string name="label_search_result_empty">Kết quả tìm kiếm không tồn tại!</string>
  <string name="text_sended_request">Đã yêu cầu</string>
  <string name="text_message_request_add_friend">Gửi lời yêu cầu kết bạn</string>
  <string name="text_add_friend_successful">Thêm bạn thành công</string>
  <string name="text_already_add_friend">Bạn bè</string>
  <string name="text_title_info">Thông tin cá nhân</string>
  <string name="text_unfriend">Huỷ kết bạn</string>
  <string name="text_chat">Chat</string>
  <string name="text_current_location">Vị trí hiện tại</string>
  <string name="title_delete_venue_dialog">Xoá địa điểm</string>
  <string name="content_delete_venue_dialog">Bạn có muốn xoá địa điểm này khỏi danh sách không?</string>
  <string name="content_delete_all_venue">Bạn có muốn xoá tất cả địa điểm khỏi danh sách không?</string>
  <string name="text_agree">CÓ</string>
  <string name="text_disagree">KHÔNG</string>
  <string name="text_already_choose">Đã chọn</string>
  <string name="text_not_choose">Chưa chọn</string>
  <string name="text_book_store">Cửa hàng sách</string>
  <string name="text_cafe">Tiệm Cà phê</string>
  <string name="label_update_location_interval">Thời gian cập nhật vị trí liên tiếp (phút)</string>
  <string name="label_update_location">Cập nhật vị trí của bạn liên tục </string>
  <string name="label_priority_location">Độ ưu tiên cập nhật</string>
  <string name="label_update_location_by_distance">Cập nhật vị trí sau khi đi được (mét) </string>
  <string name="label_update_location_setting">CẬP NHẬT VỊ TRÍ CỦA BẠN</string>
  <string name="content_update_location_setting">Bật tắt cập nhật,chỉnh sửa thời gian, khoảng cách cập nhật</string>
  <string name="content_priority_update_location">Độ chính xác, Cân bằng, Nguồn điện thấp</string>
  <string name="pref_key_update_location_setting">updatelocationsetting</string>
  <string name="pref_key_request_update_location">requestupdatelocation</string>
  <string name="pref_key_update_location_interval">updatelocationinterval</string>
  <string name="pref_key_priority_update_location">prioritieslocation</string>
  <string name="title_priorities_update_location">Chọn độ ưu tiên cập nhật vị trí của bạn</string>
  <string name="pref_key_update_location_distance">updatelocationdistance</string>
</resources>