<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_key_update_location_setting"
        android:title="@string/label_update_location_setting">
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/label_update_location"
            android:key="@string/pref_key_request_update_location"
            android:summary="@string/content_update_location_setting"
            />
        <EditTextPreference
            android:defaultValue="0"
            android:title="@string/label_update_location_interval"
            android:key="@string/pref_key_update_location_interval"
            />
        <ListPreference
            android:defaultValue="false"
            android:dialogTitle="@string/title_priorities_update_location"
            android:title="@string/label_priority_location"
            android:summary="@string/content_priority_update_location"
            android:entries="@array/pref_priority_update_location_entries"
            android:entryValues="@array/pref_priority_update_location_entries"
            android:key="@string/pref_key_priority_update_location"
            />
        <EditTextPreference
            android:defaultValue="0"
            android:title="@string/label_update_location_by_distance"
            android:key="@string/pref_key_update_location_distance"
            />

    </PreferenceCategory>
</PreferenceScreen>