<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:minHeight="300dp"
  android:minWidth="300dp"
  android:background="@drawable/bg_round_corner_dialog"
  >



  <TextView
    android:id="@+id/text_title_dialog"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/text_sign_up"
    style="@style/TitleDialog"
    android:background="@color/colorPrimary"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
     />

  <com.rengwuxian.materialedittext.MaterialEditText
    android:id="@+id/text_signup_email"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/hint_text_email"
    style="@style/EditTextSignup"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@+id/text_title_dialog"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginRight="8dp"
    android:layout_marginEnd="16dp"
    app:met_helperText="@string/edit_text_email_helper"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_bias="0.0" />

  <com.rengwuxian.materialedittext.MaterialEditText
    android:id="@+id/text_signup_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/hint_text_password"
    style="@style/EditTextSignup"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_signup_email"
    android:layout_marginRight="16dp"
    app:met_helperText="@string/edit_text_password_helper"
    android:layout_marginEnd="16dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_bias="1.0" />

  <com.rengwuxian.materialedittext.MaterialEditText
    android:id="@+id/text_signup_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/hint_text_name"
    style="@style/EditTextSignup"
    app:met_helperText="@string/edit_text_name_helper"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@+id/text_signup_password"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginRight="16dp"
    android:layout_marginEnd="16dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_bias="0.6" />

  <com.beardedhen.androidbootstrap.BootstrapButton
    android:id="@+id/button_sign_up"
    android:layout_width="@dimen/width_button"
    android:layout_height="@dimen/height_button"
    android:text="@string/button_sign_up"
    app:bootstrapBrand="info"
    app:roundedCorners="true"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="16dp"
    app:layout_constraintTop_toBottomOf="@+id/text_signup_name"
    app:layout_constraintHorizontal_bias="0.5" />


</android.support.constraint.ConstraintLayout>