<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageContentDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_directions_run_white_48dp" />

    <TextView
        android:id="@+id/text_app_name"
        style="@style/TextAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_text_email"
        style="@style/EditTextLogins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_email_white_24dp"
        android:hint="@string/hint_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_name"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_text_password"
        style="@style/EditTextLogins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_lock_white_24dp"
        android:hint="@string/hint_text_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
         />

    <Button
        android:id="@+id/button_sign_in"
        style="@style/ButtonLogin"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:layout_marginTop="62dp"
        android:text="@string/button_sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_save_account"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <Button
        android:id="@+id/button_sign_up"
        style="@style/ButtonLogin"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:layout_marginTop="16dp"
        android:text="@string/button_sign_up"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/button_sign_in"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in"
        app:layout_constraintStart_toStartOf="parent"
         />

    <CheckBox
        android:id="@+id/check_save_account"
        style="@style/CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/remember_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

    <TextView
        android:id="@+id/text_forgot_password"
        style="@style/TextCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_save_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_login"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:indicatorName="PacmanIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>