<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round_corner_dialog"
    android:orientation="vertical">

    <TextView
        style="@style/TitleDialog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:background="@color/colorPrimary"
        android:text="@string/title_venues_dialog" />

    <com.malinskiy.superrecyclerview.SuperRecyclerView
        android:id="@+id/recycler_view_venues"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="8"
        app:layout_empty="@layout/recyclerview_empty" />

    <TextView
        android:id="@+id/text_num_of_result"
        style="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/text_num_of_result" />

    <Button
        android:id="@+id/button_okay"
        style="@style/Button"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:text="@string/button_ok" />


</LinearLayout>